# ability_yug

./: .gitignore  dev_server.py  pyproject.toml
src/ability_yug/: main.py
src/ability_yug/pages/: router.py
src/ability_yug/static/styles/: default.css
src/ability_yug/templates/: main.html
